--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
-                <p>一匹夜狼<img src="https://pic.imgdb.cn/item/616662672ab3f51d91317a64.png" alt="狼" style="width: 20px; vertical-align: middle;"></p>
+                <!--<p>一匹夜狼<img src="https://pic.imgdb.cn/item/616662672ab3f51d91317a64.png" alt="狼" style="width: 20px; vertical-align: middle;"></p>-->
                 <p>爱好计算机</p>
                 <p>瞎折腾浪费时间最在行</p>
                 <!--<p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
