--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -87,8 +87,24 @@
             </div>
             <div class="unit-100">
                 <div class="language">
-
-                    <br>
+                <a class="btn2 btn-outline2" href="https://www.le.com/" rel="nofollow"
+                                target="_blank">لې شېې</a>
+                            <a class="btn2 btn-outline2" href="https://www.iqiyi.com/" rel="nofollow"
+                                target="_blank">ئەيچييى</a>
+                            <a class="btn2 btn-outline2" href="https://www.mgtv.com/" rel="nofollow"
+                                target="_blank">ماڭەو كىنو</a>
+                            <a class="btn2 btn-outline2" href="https://www.tudou.com/" rel="nofollow"
+                                target="_blank">تۇدو كىنو</a>
+                            <br>
+                            <a class="btn2 btn-outline2" href="https://v.qq.com/" rel="nofollow"
+                                target="_blank">تېڭشۇن كىنو</a>
+                            <a class="btn2 btn-outline2" href="https://www.youku.com/" rel="nofollow"
+                                target="_blank">يوۇكۇ</a>
+                            <a class="btn2 btn-outline2" href="https://tv.sohu.com/" rel="nofollow"
+                                target="_blank">سوخۇ كىنو</a>
+                            <a class="btn2 btn-outline2" href="https://www.pptv.com/" rel="nofollow"
+                                target="_blank">كىنوpptv</a>
+                            <br>
 
                     <p>قوللاپ قويۇڭ رەھمەت</p>
                     <div>
