--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <a href="https://www.cnblogs.com/kaysar">马上进入</a>
         </div>
         <div class="link">
+            <span>电脑系统下载页面</span>
+            <a href="./pc">马上进入</a>
+        </div>
+        <div class="link">
             <span>网购优惠券</span>
             <a href="http:/ijhif.yhzu.cn/">马上进入</a>
         </div>
