--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://www.cnblogs.com/kaysar">马上进入</a>
         </div>
         <div class="link">
-            <span>电脑系统下载页面</span>
+            <span>电脑系统下载</span>
             <a href="./pc">马上进入</a>
         </div>
         <div class="link">
