--- a/pc/index.html
+++ b/pc/index.html
@@ -7,10 +7,9 @@
     <meta name="keywords" content="1号影视,电影解析全民解析,vip视频在线解析,永久免费,电影解析">
     <meta name="description" content="解析电影">
     <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-    <meta name="keywords"
-        content="kaysarsoft,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
-    <meta name="description" content="在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，">
-    <link href="https://kaysar.top/vip/v/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="keywords"content="系统">
+    <meta name="description" content="电脑系统下载页面">
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="./style.css" type="text/css" rel="stylesheet">
     <!--引入字体，全局字体使用-->
     <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
