--- a/pc/index.html
+++ b/pc/index.html
@@ -36,7 +36,7 @@
                     <p style="letter-spacing: 1px; text-align: center;">Windows</p>
                     <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
                     <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
-                    <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">进入芒果视频</a>
+                    <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">windows8</a>
                     <a class="btn2 btn-outline2" href="https://www.tudou.com/" rel="nofollow" target="_blank">windows10网信政府办</a>
                     <br>
                     <p style="letter-spacing: 1px; text-align: center;">office</p>
