--- a/pc/index.html
+++ b/pc/index.html
@@ -37,7 +37,7 @@
                     <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
                     <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
                     <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">windows8</a>
-                    <a class="btn2 btn-outline2" href="https://www.tudou.com/" rel="nofollow" target="_blank">windows10网信政府办</a>
+                    <a class="btn2 btn-outline2" href="https://download.cmgos.com/oem/login" rel="nofollow" target="_blank">windows10网信政府办</a>
                     <br>
                     <p style="letter-spacing: 1px; text-align: center;">office</p>
                     <a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img" rel="nofollow" target="_blank">Office 2021</a>
