--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -13,14 +13,14 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/stylee.css" type="text/css" rel="stylesheet">
 	<!--引入字体，全局字体使用-->
-	<link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+	<link rel="stylesheet" href="https://cdn.iocdn.cc/css?family=Ma+Shan+Zheng&display=swap" />
 
 	<style>
 		/*全局字体*/
 		
 		body,
 		* {
-			font-family: SJxingkai-C;
+			font-family:"Ma Shan Zheng", cursive;
 		}
 		/*维吾尔字体*/
 		
