--- a/vip/v/1.html
+++ b/vip/v/1.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>1号解析</title>
     <!--全局字体-->
-    <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+    <link rel="stylesheet" href="https://cdn.iocdn.cc/css?family=Ma+Shan+Zheng&display=swap" />
 	<style>
 		body {
 			margin: 0;
-			font-family: "SJxingkai-C";
+			font-family:  "Ma Shan Zheng", cursive;
 			font-size: 11pt;
 			color: #c4c4c2;
 			background: url(https://vip.helloimg.com/images/2023/04/26/oqBB9S.jpg);
