--- a/pc/index.html
+++ b/pc/index.html
@@ -45,6 +45,7 @@
                     <a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img" rel="nofollow" target="_blank">Office 2016
                     </a>
                     <a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow" target="_blank">wps教育版</a>
+                    <a class="btn2 btn-outline2" href="https://mirror.ghproxy.com/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.0.4/HEU_KMS_Activator_v42.0.4.rar" rel="nofollow" target="_blank">Windows&office激活heu</a>
                     <br>
 <br><br><br>
                         <img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
