--- a/pc/index.html
+++ b/pc/index.html
@@ -1,69 +1,80 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>电脑系统下载页</title>
-    <meta name="keywords" content="1号影视,电影解析全民解析,vip视频在线解析,永久免费,电影解析">
-    <meta name="description" content="解析电影">
-    <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-    <meta name="keywords"content="系统">
-    <meta name="description" content="电脑系统下载页面">
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./style.css" type="text/css" rel="stylesheet">
-    <!--引入字体，全局字体使用-->
-    <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>电脑系统下载页</title>
+	<meta name="keywords" content="1号影视,电影解析全民解析,vip视频在线解析,永久免费,电影解析">
+	<meta name="description" content="解析电影">
+	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
+	<meta name="keywords" content="系统">
+	<meta name="description" content="电脑系统下载页面">
+	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./style.css" type="text/css" rel="stylesheet">
+	<!--引入字体，全局字体使用-->
+	<link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
 
-    <style>
-        /*全局字体*/
-
-        body,* {
-            font-family: SJxingkai-C;
-        }
-    </style>
+	<style>
+		/*全局字体*/
+		
+		body,
+		* {
+			font-family: SJxingkai-C;
+		}
+	</style>
 </head>
 
 <body>
 
 
-    <div>
-        <h3 align="center">电脑系统下载页面</h3>
-        <hr>
-        
-        <div class="col-md-14 column">
-            <div class="unit-100">
-                <div class="language">
-                    <p style="letter-spacing: 1px; text-align: center;">Windows</p>
-                    <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
-                    <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
-                    <a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">windows8</a>
-                    <a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank">windows10网信政府办</a>
-                    <br>
-                    <p style="letter-spacing: 1px; text-align: center;">office</p>
-                    <a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img" rel="nofollow" target="_blank">Office 2021</a>
-                    <a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img" rel="nofollow" target="_blank">Office 2019</a>
-                    <a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img" rel="nofollow" target="_blank">Office 2016
-                    </a>
-                    <a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow" target="_blank">wps教育版</a>
-                    <a class="btn2 btn-outline2" href="https://mirror.ghproxy.com/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.0.4/HEU_KMS_Activator_v42.0.4.rar" rel="nofollow" target="_blank">Windows&office激活heu</a>
-                    <br>
-<br><br><br>
-                        <img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
-                </div>
+	<div>
+		<h3 align="center">电脑系统下载页面</h3>
+		<hr>
 
-            </div>
-            <div id="coin" class="coin">
-                <script>var Coin = true;</script>
-            </div>
+		<div class="col-md-14 column">
+			<div class="unit-100">
+				<div class="language">
+					<p style="letter-spacing: 1px; text-align: center;">Windows</p>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">windows8</a>
+					<a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank">windows10网信政府办</a>
+					<br>
+					<p style="letter-spacing: 1px; text-align: center;">office</p>
+					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img"
+						rel="nofollow" target="_blank">Office 2024</a>
+						<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img"
+							rel="nofollow" target="_blank">Office 2021</a>
+							<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img"
+								rel="nofollow" target="_blank">Office 2019</a>
+								<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img"
+									rel="nofollow" target="_blank">Office 2016
+									</a>
+									<a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow"
+										target="_blank">wps教育版</a>
+										<a class="btn2 btn-outline2" href="https://mirror.ghproxy.com/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.0.4/HEU_KMS_Activator_v42.0.4.rar"
+											rel="nofollow" target="_blank">Windows&office激活heu</a>
+											<br>
+											<br><br><br>
+											<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
+				</div>
 
-            <div class="panel-body" style="text-align: center;">
+			</div>
+			<div id="coin" class="coin">
+				<script>
+					var Coin = true;
+				</script>
+			</div>
 
-                <div class="container-fluid">
-                    </button>
-                    &nbsp;&nbsp;&nbsp;Copyright © 凯撒提供技术
-                </div>
-            </div>
-        </div>
+			<div class="panel-body" style="text-align: center;">
+
+				<div class="container-fluid">
+					</button>
+					&nbsp;&nbsp;&nbsp;Copyright © 凯撒提供技术
+				</div>
+			</div>
+		</div>
 </body>
 
 </html>
