--- a/love/mymunira/index.html
+++ b/love/mymunira/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>七夕节快乐</title>
+    <title>♥love♥munira♥</title>
     <link rel='stylesheet' href='css/55c16d94000109f300000000.css' />
     <link rel='stylesheet' href='css/55c16dab0001286100000000.css' />
     <link rel='stylesheet' href='css/55c16dc00001fa1a00000000.css' />
