--- a/love/mymunira/index.html
+++ b/love/mymunira/index.html
@@ -79,7 +79,7 @@
                 <li class="stars6"></li>
             </ul>
             <!-- logo图 -->
-            <div class="logo">祝天下有情人终成眷属</div>
+            <div class="logo">munira我想跟你一辈子一起看月亮，能不能做我夫人？</div>
         </li>
     </ul>
     <!-- 雪花 -->
