--- a/love/1/index.html
+++ b/love/1/index.html
@@ -1,16 +1,8 @@
-<!--
- * @Author: your name
- * @Date: 2021-04-09 15:21:37
- * @LastEditTime: 2021-04-09 15:23:26
- * @LastEditors: Please set LastEditors
- * @Description: In User Settings Edit
- * @FilePath: \原生JS制作爱心表白代码\index.html
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>心心-样例图</title>
+<title>munira♥kaysar</title>
 
 <link href="favicon.ico" rel="shortcut icon" class="icon-love" type="images/x-ico">
 
