--- a/love/mymunira/1/index.html
+++ b/love/mymunira/1/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>munira♥kaysar</title>
+	<meta charset="UTF-8">
+	<title>munira♥kaysar</title>
 
-<link href="favicon.ico" rel="shortcut icon" class="icon-love" type="images/x-ico">
+	<link href="favicon.ico" rel="shortcut icon" class="icon-love" type="images/x-ico">
 
-<link rel="stylesheet" href="css/love.css">
+	<link rel="stylesheet" href="css/love.css">
+    <embed src="http://music.163.com/song/media/outer/url?id=558290126.mp3" autostart="true" loop="true" hidden="true"></embed>
 
 </head>
+
 <body>
 
-<div class="container" onselectstart="return false;" unselectable="on" style="-moz-user-select:none;">
+	<div class="container" onselectstart="return false;" unselectable="on" style="-moz-user-select:none;">
 
-    <div class="body_left">
-        <img src="images/biubiubiu.gif" alt="" ondragstart='return false;'>
-    </div>
+		<div class="body_left">
+			<img src="images/biubiubiu.gif" alt="" ondragstart='return false;'>
+		</div>
 
-    <div class="body_center love">
-        <div class="block">
-            <div class="div1"></div>
-            <div class="div2"></div>
-            <div class="div3"></div>
-            <div class="div4"></div>
-        </div>
-    </div>
+		<div class="body_center love">
+			<div class="block">
+				<div class="div1"></div>
+				<div class="div2"></div>
+				<div class="div3"></div>
+				<div class="div4"></div>
+			</div>
+		</div>
 
-</div>
+	</div>
 
-<div class="footer">
-    <div class="border">
-        <div class="border-top"></div>
-        <div class="border-bottom"></div>
-    </div>
+	<div class="footer">
+		<div class="border">
+			<div class="border-top"></div>
+			<div class="border-bottom"></div>
+		</div>
 
-</div>
+	</div>
 
-<script type="text/javascript" src="js/love.js"></script>
+	<script type="text/javascript" src="js/love.js"></script>
 
 </body>
+
 </html>
