--- a/love/mymunira/1/index.html
+++ b/love/mymunira/1/index.html
@@ -8,7 +8,7 @@
 	<link href="favicon.ico" rel="shortcut icon" class="icon-love" type="images/x-ico">
 
 	<link rel="stylesheet" href="css/love.css">
-    <embed src="http://music.163.com/song/media/outer/url?id=558290126.mp3" autostart="true" loop="true" hidden="true"></embed>
+    <audio autoplay="" loop=""> <source src="http://music.163.com/song/media/outer/url?id=558290126.mp3"></audio>
 
 </head>
 
