--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
 <meta name="viewport" content="width=device-width,initial-scale=1">
  <head>
-<title>夜狼电子商务团队</title>
+<title>电子商务团队</title>
 <link rel="shortcut icon" href="//pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-  <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
+  <meta name="keywords" content="">
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
 <!--百度统计-->
@@ -15,10 +15,10 @@
 <body>
     <!--开始-->
     <div class="contnt">
-        <header class="meng">夜狼电子商务团队主页</header>
+        <header class="meng">商务团队主页</header>
         <div class="messageDetails">
             <div class="storeup">
-                <p>夜狼团队旗下网站入口</p>
+                <p>团队旗下网站入口</p>
             </div>
                     <div class="link">
             <span>关于作者</span>
