--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -30,7 +30,7 @@
 <body>
 
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
-        <h1 style="font-size: 18px; text-align: center;">تۈن بۆرىسى كىنو يىشىش سىستىمىسى</h1>
+        <h1 style="font-size: 18px; text-align: center;"> كىنو يىشىش سىستىمى</h1>
         <hr>
 
         <p style=" text-align: center;">
