--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -17,9 +17,10 @@
 
 	<style>
 		/*全局字体*/
+		
 		body,
 		* {
-			font-family:"Ma Shan Zheng", cursive;
+			font-family: "Ma Shan Zheng", cursive;
 		}
 	</style>
 	<!--全屏播放和解析的js-->
@@ -48,6 +49,7 @@
 				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
                 </span>
 				<div class="language">
+                    <img  src="https://vip.helloimg.com/images/2025/02/10/o8ajXg.png" width="100%" >
 					<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
 					<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
 					<div class="col-md-14 column">
@@ -68,7 +70,7 @@
 						<div class="input-group" style="width: 100%;">
 							<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
 							<select class="form-control input-lg" id="jk">
-                            <option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用</option>
+                            <!--<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用</option>-->
                             <option value="https://jx.xmflv.com/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
 
 
