--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -49,7 +49,7 @@
 				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
                 </span>
 				<div class="language">
-                    <img  src="https://vip.helloimg.com/images/2025/02/10/o8ajXg.png" width="100%" >
+                    <img  src="https://www.helloimg.com/i/2025/02/10/67a97247502ea.png" width="100%" >
 					<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
 					<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
 					<div class="col-md-14 column">
