--- a/about/index.html
+++ b/about/index.html
@@ -99,8 +99,8 @@
                         <li><a href="https://xjsg5jmy.kuaizhan.com/a/USarkedTwP">WX</a></li>
                         <li><a href="https://music.163.com/#/user/home?id=352226315">网易云音乐</a></li>
                         <li><a href="https://b23.tv/l5xuc2">B站</a></li>
-                        <li><a href="https://github.com/kaysarbiz/">github</a></li>
-                        <li><a href="https://gitee.com/kaysarbiz/">gitee</a></li>
+                        <li><a href="https://github.com/kaysasoft/">github</a></li>
+                        <li><a href="https://gitee.com/kaysarsoft/">gitee</a></li>
                     </ul>
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
