--- a/about/index.html
+++ b/about/index.html
@@ -96,8 +96,8 @@
                     <ul class="ul">
                         <li><a href="https://www.cnblogs.com/kaysar">Blog</a></li>
                         <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=UtsYYO8Skj_AAGmxECAgryc5Llm1hMSY&noverify=0&personal_qrcode_source=4">QQ</a></li>
-                        <li><a href="https://xjsg5jmy.kuaizhan.com/a/USarkedTwP">WX</a></li>
-                        <li><a href="https://music.163.com/#/user/home?id=352226315">网易云音乐</a></li>
+                        <!--<li><a href="https://xjsg5jmy.kuaizhan.com/a/USarkedTwP">WX</a></li>
+                        <li><a href="https://music.163.com/#/user/home?id=352226315">网易云音乐</a></li>-->
                         <li><a href="https://b23.tv/l5xuc2">B站</a></li>
                         <li><a href="https://github.com/kaysasoft/">github</a></li>
                         <li><a href="https://gitee.com/kaysarsoft/">gitee</a></li>
