--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
                     <br />
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
                     <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
+                    <span style="color: rgb(39, 39, 39);">cat ./me.txt</span>
                     <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
                     <p>略懂html，css；爱好折腾去解决一切问题</p>
                     <p>这条路我才刚刚迈开了我的第一步</p>
