--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
-<html lang="zh-cn" >
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+<html lang="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
- <head>
-<title>凯撒电子商务团队</title>
-<link rel="shortcut icon" href="//pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-  <meta name="keywords" content="凯撒,凯撒电子商务团队，凯撒电子商务">
-  <meta name="description" content="开发各种电子商务软件以及运营">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
-<!--百度统计-->
 
-<!--统计技术-->
+<head>
+	<title>凯撒电子商务团队</title>
+	<link rel="shortcut icon" href="//pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
+	<meta name="keywords" content="凯撒,凯撒电子商务团队，凯撒电子商务">
+	<meta name="description" content="开发各种电子商务软件以及运营">
+	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<!--百度统计-->
+
+	<!--统计技术-->
 </head>
+
 <body>
-    <!--开始-->
-    <div class="contnt">
-        <header class="meng">凯撒电子商务团队主页</header>
-        <div class="messageDetails">
-            <div class="storeup">
-                <p>团队旗下网站入口</p>
-            </div>
-                    <div class="link">
-            <span>关于作者</span>
-            <a href="./about/">马上进入</a>
-        </div>
-        <div class="link">
-            <span>凯撒博客</span>
-            <a href="https://www.cnblogs.com/kaysar">马上进入</a>
-        </div>
-        <div class="link">
-            <span>电脑系统下载</span>
-            <a href="./pc">马上进入</a>
-        </div>
-        <div class="link">
-            <span>网购优惠券</span>
-            <a href="http:/ijhif.yhzu.cn/">马上进入</a>
-        </div>
-        <div class="link">
-            <span>爱淘宝</span>
-            <a href="./youhui/aitaobao/">马上进入</a>
-        </div>
-        <div class="link">
-            <span>饿了么内部券</span>
-            <a href="./youhui/eleme/">马上进入</a>
-        </div> 
-         <div class="link">
-            <span>美团内部券</span>
-            <a href="./youhui/meituan/">马上进入</a>
-        </div>     
-        <!--<div class="link">
+	<!--开始-->
+	<div class="contnt">
+		<header class="meng">凯撒电子商务团队主页</header>
+		<div class="messageDetails">
+			<div class="storeup">
+				<p>团队旗下网站入口</p>
+			</div>
+			<div class="link">
+				<span>关于作者</span>
+				<a href="./about/">马上进入</a>
+			</div>
+			<div class="link">
+				<span>凯撒博客</span>
+				<a href="https://www.cnblogs.com/kaysar">马上进入</a>
+			</div>
+			<div class="link">
+				<span>电脑系统下载</span>
+				<a href="./pc">马上进入</a>
+			</div>
+			<div class="link">
+				<span>网购优惠券</span>
+				<a href="http:/ijhif.yhzu.cn/">马上进入</a>
+			</div>
+			<div class="link">
+				<span>爱淘宝</span>
+				<a href="./youhui/aitaobao/">马上进入</a>
+			</div>
+			<div class="link">
+				<span>饿了么内部券</span>
+				<a href="./youhui/eleme/">马上进入</a>
+			</div>
+			<div class="link">
+				<span>美团内部券</span>
+				<a href="./youhui/meituan/">马上进入</a>
+			</div>
+			<!--<div class="link">
             <span>凯撒云盘</span>
             <a href="http:/disk.kaysar.top/">马上进入</a>
         </div>         -->
-        <div class="link">
-            <span>vip电影免费观看</span>
-            <a href="./vip/v/">马上进入</a>
-        </div>
-        <div class="link">
-            <span>vip文库导出TXT</span>
-            <a href="./vip/wenkufuzhi/">马上进入</a>
-        </div>
-        </div>
-        <footer>
-        <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队   <a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a></p>
-    </footer>
-    </div>
-    <!--结束-->
-    <!--51啦统计-->
-    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})</script>
-<!---->
+			<div class="link">
+				<span>vip电影免费观看</span>
+				<a href="./vip/v/">马上进入</a>
+			</div>
+			<div class="link">
+				<span>vip文库导出TXT</span>
+				<a href="./vip/wenkufuzhi/">马上进入</a>
+			</div>
+		</div>
+		<footer>
+			<p>© 2019-
+				<script>
+					document.write(new Date().getFullYear())
+				</script>夜狼团队
+				<a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a>
+			</p>
+		</footer>
+	</div>
+	<!--结束-->
+	<!--51啦统计-->
+	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+	<script>
+		LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})
+	</script>
+	<!---->
 </body>
+
 </html>
