--- a/vip/wenkufuzhi/index.html
+++ b/vip/wenkufuzhi/index.html
@@ -61,7 +61,7 @@
 <p>声明：本功能仅做内容的友好展示，未提供任何越权功能，供学习测试，请勿滥用。</p>
 <p class="center-align">
         <a target="_blank" href="http://ijhif.yhzu.cn/" rel="nofollow">网购优惠</a>｜    	
-        <a target="_blank" href="https://kaysarbiz.gitee.io/waimai/" rel="nofollow">外卖红包</a> ｜   
+        <a target="_blank" href="../../waimai/" rel="nofollow">外卖红包</a> ｜   
 </p>
      
 
@@ -77,7 +77,7 @@ var docid = document.getElementById("docid").value;
 window.open('http://bdwk.588230.com/wk.php?url='+docid);
 }
 document.getElementById("more").onclick = function(){
-	window.open("https://kaysarbiz.gitee.io/");
+	window.open("../../");
 }
 </script>
 </body>
