--- a/vip/wenkufuzhi/index.html
+++ b/vip/wenkufuzhi/index.html
@@ -46,7 +46,7 @@
 			<button id="upbtn" class="am-btn am-btn-success">提交</button>
         <button id="more" class="am-btn am-btn-success" style="margin-left: 10px">更多方法</button>
         <br>
-        <img src="https://kaysarbiz.gitee.io/img/paycode/123.png" alt="" >
+        <img src="https://www.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="" >
 		</div>
 	</div>
 	<div class="footer">
