--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<title>凯撒电子商务团队</title>
 	<link rel="shortcut icon" href="//pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-	<meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队，,撒电子商务">
+	<meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,凯撒电子商务">
 	<meta name="description" content="开发各种电子商务软件以及运营">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<!--百度统计-->
