--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,凯撒电子商务">
 	<meta name="description" content="开发各种电子商务软件以及运营">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
+    <meta name="baidu-site-verification" content="codeva-WM3SbOx6Kl" />
 	<!--百度统计-->
 
 	<!--统计技术-->
