--- a/pc/index.html
+++ b/pc/index.html
@@ -56,8 +56,12 @@
 										<a class="btn2 btn-outline2" href="https://gh.llkk.cc/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
 											rel="nofollow" target="_blank">Windows&office激活heu</a>
 											<br>
-											<br><br><br>
-											<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
+											<p style="letter-spacing: 1px; text-align: center;">必装软件</p>
+											<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html"
+												rel="nofollow" target="_blank">WINRAR</a>
+												<br>
+												<br><br><br>
+												<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
 				</div>
 
 			</div>
