--- a/pc/index.html
+++ b/pc/index.html
@@ -59,7 +59,10 @@
 											<p style="letter-spacing: 1px; text-align: center;">必装软件</p>
 											<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html"
 												rel="nofollow" target="_blank">WINRAR</a>
-												<br>
+                                                <a class="btn2 btn-outline2" href="./idm激活.cmd"
+												rel="nofollow" target="_blank">idm激活</a>
+												
+					<br>
 												<br><br><br>
 												<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
 				</div>
