--- a/pc/index.html
+++ b/pc/index.html
@@ -53,7 +53,7 @@
 									</a>
 									<a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow"
 										target="_blank">wps教育版</a>
-										<a class="btn2 btn-outline2" href="https://gh.llkk.cc/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
+										<a class="btn2 btn-outline2" href="hhttps://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
 											rel="nofollow" target="_blank">Windows&office激活heu</a>
 											<br>
 											<p style="letter-spacing: 1px; text-align: center;">必装软件</p>
