--- a/pc/index.html
+++ b/pc/index.html
@@ -35,13 +35,13 @@
 		<div class="col-md-14 column">
 			<div class="unit-100">
 				<div class="language">
-					<p style="letter-spacing: 1px; text-align: center;">Windows</p>
+					<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">Windows</p>
 					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
 					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
 					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">windows8</a>
 					<a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank">windows10网信政府办</a>
 					<br>
-					<p style="letter-spacing: 1px; text-align: center;">office</p>
+					<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">office</p>
 					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img"
 						rel="nofollow" target="_blank">Office 2024</a>
 						<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img"
@@ -56,7 +56,7 @@
 										<a class="btn2 btn-outline2" href="hhttps://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
 											rel="nofollow" target="_blank">Windows&office激活heu</a>
 											<br>
-											<p style="letter-spacing: 1px; text-align: center;">必装软件</p>
+											<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">必装软件</p>
 											<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html"
 												rel="nofollow" target="_blank">WINRAR</a>
                                                 <a class="btn2 btn-outline2" href="./idm激活.cmd"
