--- a/pc/index.html
+++ b/pc/index.html
@@ -61,7 +61,8 @@
 												rel="nofollow" target="_blank">WINRAR</a>
                                                 <a class="btn2 btn-outline2" href="./idm激活.cmd"
 												rel="nofollow" target="_blank">idm激活</a>
-												
+												<a class="btn2 btn-outline2" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web"
+												rel="nofollow" target="_blank">畅言普通话</a>
 					<br>
 												<br><br><br>
 												<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
