--- a/pc/index.html
+++ b/pc/index.html
@@ -55,6 +55,8 @@
 										target="_blank">wps教育版</a>
 										<a class="btn2 btn-outline2" href="hhttps://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
 											rel="nofollow" target="_blank">Windows&office激活heu</a>
+                                            <a class="btn2 btn-outline2" href="https://otp.landian.vip/redirect/download.php?type=runtime&arch=x86&site=nyist"
+											rel="nofollow" target="_blank">Office Tool</a>
 											<br>
 											<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">必装软件</p>
 											<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html"
