--- a/index.html
+++ b/index.html
@@ -44,13 +44,8 @@
 				<a href="./youhui/aitaobao/">马上进入</a>
 			</div>
 			<div class="link">
-				<span>饿了么内部券</span>
-				<a href="./youhui/eleme/">马上进入</a>
-			</div>
-			<div class="link">
-				<span>美团内部券</span>
-				<a href="./youhui/meituan/">马上进入</a>
-			</div>
+				<span>网购外卖内部券</span>
+				<a href="https://s46m6pdf.jutuike.cn/#/?code=S46m6pDF">马上进入</a>
 			<div class="link">
             <span>凯撒云盘</span>
             <a href="http:/disk.kaysar.top/">马上进入</a>
