--- a/pay/index.html
+++ b/pay/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>[向夜狼付款]</title>
+<title>[赞赏]</title>
 <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
 <meta name="keywords" content="收银台,个人收款二维码,支付宝在线收款,微信在线收款" />
 <meta name="description" content="收银台,一个无需申请付款秒到个人帐号的收款程序,安全快捷,个人收款必备" />
@@ -60,7 +60,7 @@
 
 <div class="g-foot">
   <div class="wrap">
-      <p><a href="http://124.222.6.169">夜狼电子商务</a></p>
+      <p><a href="../">夜狼电子商务</a></p>
   </div>
 </div></div> 
 <script src="./public/js/jquery.js"></script>
