优化首页样式，添加新的CSS文件

--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<meta http-equiv="Content-,Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-
 <head>
-	<title>凯撒电子商务团队</title>
-	<link rel="shortcut icon" href="//pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-	<meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,凯撒电子商务">
-	<meta name="description" content="开发各种电子商务软件以及运营">
-	<link href="css/style.css" type="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>凯撒电子商务团队</title>
+    <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
+    <meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,凯撒电子商务">
+    <meta name="description" content="开发各种电子商务软件以及运营">
+    <link href="css/style_new.css" type="text/css" rel="stylesheet">
     <meta name="baidu-site-verification" content="codeva-WM3SbOx6Kl" />
-	<!--百度统计-->
-
-	<!--统计技术-->
 </head>
-
 <body>
-	<!--开始-->
-	<div class="contnt">
-		<header class="meng">凯撒电子商务团队主页</header>
-		<div class="messageDetails">
-			<div class="storeup">
-				<p>团队旗下网站入口</p>
-			</div>
-			<div class="link">
-				<span>关于作者</span>
-				<a href="./about/">马上进入</a>
-			</div>
-			<div class="link">
-				<span>凯撒博客</span>
-				<a href="https://www.cnblogs.com/kaysar">马上进入</a>
-			</div>
-			<div class="link">
-				<span>电脑系统下载</span>
-				<a href="./pc">马上进入</a>
-			</div>
-			<div class="link">
-				<span>网购优惠券</span>
-				<a href="http:/ijhif.yhzu.cn/">马上进入</a>
-			</div>
-			<div class="link">
-				<span>爱淘宝</span>
-				<a href="./youhui/aitaobao/">马上进入</a>
-			</div>
-			<div class="link">
-				<span>网购外卖内部券</span>
-				<a href="https://s46m6pdf.jutuike.cn/#/?code=S46m6pDF">马上进入</a>
-			<div class="link">
-            <span>凯撒云盘</span>
-            <a href="http:/disk.kaysar.top/">马上进入</a>
-        </div>         
-			<div class="link">
-				<span>vip电影免费观看</span>
-				<a href="./vip/v/">马上进入</a>
-			</div>
-			<div class="link">
-				<span>vip文库导出TXT</span>
-				<a href="./vip/wenkufuzhi/">马上进入</a>
-			</div>
-		</div>
-		<footer>
-			<p>© 2019-
-				<script>
-					document.write(new Date().getFullYear())
-				</script>夜狼团队
-				<a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a>
-			</p>
-		</footer>
-	</div>
-	<!--结束-->
-	<!--51啦统计-->
-	<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-	<script>
-		LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})
-	</script>
-	<!---->
-</body>
+    <div class="contnt">
+        <header>
+            <h1 class="meng">凯撒电子商务团队主页</h1>
+            <p>专业的电子商务解决方案提供商</p>
+        </header>
 
+        <div class="messageDetails">
+            <div class="storeup">
+                <p>团队旗下网站入口</p>
+            </div>
+
+            <div class="links-grid">
+                <div class="link-card">
+                    <span>关于作者</span>
+                    <a href="./about/">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>凯撒博客</span>
+                    <a href="https://www.cnblogs.com/kaysar">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>电脑系统下载</span>
+                    <a href="./pc">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>网购优惠券</span>
+                    <a href="http:/ijhif.yhzu.cn/">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>爱淘宝</span>
+                    <a href="./youhui/aitaobao/">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>网购外卖内部券</span>
+                    <a href="https://s46m6pdf.jutuike.cn/#/?code=S46m6pDF">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>凯撒云盘</span>
+                    <a href="http:/disk.kaysar.top/">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>vip电影免费观看</span>
+                    <a href="./vip/v/">马上进入</a>
+                </div>
+
+                <div class="link-card">
+                    <span>vip文库导出TXT</span>
+                    <a href="./vip/wenkufuzhi/">马上进入</a>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <p>© 2019-
+                <script>
+                    document.write(new Date().getFullYear())
+                </script> 凯撒电子商务团队
+                <a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a>
+            </p>
+        </footer>
+    </div>
+
+    <!--51啦统计-->
+    <script charset="UTF-8" id="LA_COLLECT" src="https://sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>
+        LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})
+    </script>
+</body>
 </html>
