--- a/pc/index.html
+++ b/pc/index.html
@@ -8,86 +8,55 @@
 	<meta name="keywords" content="系统,下载,windows,office">
 	<meta name="description" content="系统下载页面">
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<link href="./style.css" type="text/css" rel="stylesheet">
 	<!--引入字体，全局字体使用-->
 	<link rel="stylesheet" href="https://cdn.jsdmirror.com/gh/kaysarsoft/texiao@master/font/sanjihangkaiti/result.css" />
-	<style>
-		/*全局字体*/
-
-		body,
-		* {
-			font-family: SJxingkai-C;
-		}
-	</style>
+	<link href="./style_new.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-	<div>
-		<h3 align="center">电脑系统下载页面</h3>
-		<hr>
-		<div class="col-md-14 column">
-			<div class="unit-100">
-				<div class="language">
-					<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">Windows</p>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11"
-						rel="nofollow" target="_blank">Windows 11</a>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10"
-						rel="nofollow" target="_blank">Windows 10</a>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8"
-						rel="nofollow" target="_blank">windows8</a>
-					<a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow"
-						target="_blank">windows10网信政府办</a>
-					<br>
-					<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">office</p>
-					<a class="btn2 btn-outline2"
-						href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img"
-						rel="nofollow" target="_blank">Office 2024</a>
-					<a class="btn2 btn-outline2"
-						href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img"
-						rel="nofollow" target="_blank">Office 2021</a>
-					<a class="btn2 btn-outline2"
-						href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img"
-						rel="nofollow" target="_blank">Office 2019</a>
-					<a class="btn2 btn-outline2"
-						href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img"
-						rel="nofollow" target="_blank">Office 2016
-					</a>
-					<a class="btn2 btn-outline2"
-						href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar"
-						rel="nofollow" target="_blank">wps教育版</a>
-					<a class="btn2 btn-outline2"
-						href="hhttps://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar"
-						rel="nofollow" target="_blank">Windows&office激活heu</a>
-					<a class="btn2 btn-outline2"
-						href="https://otp.landian.vip/redirect/download.php?type=runtime&arch=x86&site=nyist"
-						rel="nofollow" target="_blank">Office Tool</a>
-					<br>
-					<p style="letter-spacing: 1px; text-align: center;font-size: 20px;">必装软件</p>
-					<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow"
-						target="_blank">WINRAR</a>
-					<a class="btn2 btn-outline2" href="./idm激活.cmd" rel="nofollow" target="_blank">idm激活</a>
-					<a class="btn2 btn-outline2"
-						href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web"
-						rel="nofollow" target="_blank">畅言普通话</a>
-					<br>
-					<br><br><br>
-					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" width=" 300">
+	<div class="container">
+		<header class="header">
+			<h3>电脑系统下载页面</h3>
+			<p>提供各类操作系统、办公软件和实用工具的高速下载</p>
+		</header>
+
+		<div class="unit-100">
+			<div class="language">
+					<div class="download-group">
+					<p>Windows 系统</p>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
+					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">Windows 8</a>
+					<a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank">Windows 10 网信政府办</a>
+				</div>
+
+				<div class="download-group">
+					<p>Office 办公软件</p>
+					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img" rel="nofollow" target="_blank">Office 2024</a>
+					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img" rel="nofollow" target="_blank">Office 2021</a>
+					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img" rel="nofollow" target="_blank">Office 2019</a>
+					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img" rel="nofollow" target="_blank">Office 2016</a>
+					<a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow" target="_blank">WPS 教育版</a>
+				</div>
+
+				<div class="download-group">
+					<p>激活工具</p>
+					<a class="btn2 btn-outline2" href="https://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar" rel="nofollow" target="_blank">HEU KMS 激活工具</a>
+					<a class="btn2 btn-outline2" href="https://otp.landian.vip/redirect/download.php?type=runtime&arch=x86&site=nyist" rel="nofollow" target="_blank">Office Tool</a>
+				</div>
+
+				<div class="download-group">
+					<p>常用软件</p>
+					<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow" target="_blank">WINRAR</a>
+					<a class="btn2 btn-outline2" href="./idm激活.cmd" rel="nofollow" target="_blank">IDM 激活</a>
+					<a class="btn2 btn-outline2" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank">畅言普通话</a>
+				</div>
+					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="下载提示" class="download-image">
 				</div>
 
 			</div>
-			<div id="coin" class="coin">
-				<script>
-					var Coin = true;
-				</script>
-			</div>
-
-			<div class="panel-body" style="text-align: center;">
-
-				<div class="container-fluid">
-					</button>
-					&nbsp;&nbsp;&nbsp;Copyright © 凯撒提供技术
-				</div>
-			</div>
+			<footer class="footer">
+				<p>Copyright © 凯撒电子商务团队 提供技术支持</p>
+			</footer>
 		</div>
 </body>
 
